<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:layout_width="match_parent"
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="settings_user_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name"
        app:iconSpaceReserved="false" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <SwitchPreference
        android:layout_width="match_parent"
        android:defaultValue="true"
        android:key="settings_weather_localization"
        android:summary="@string/pref_summary_weather_localization"
        android:title="@string/pref_title_weather_localization"
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false" />

    <ListPreference
        android:layout_width="match_parent"
        android:defaultValue="Metric"
        android:entries="@array/pref_weather_scales_list"
        android:entryValues="@array/pref_weather_values_list"
        android:key="settings_weather_scale"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary=""
        android:title="@string/pref_title_weather_scale"
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>