<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/drawerCIV"
        android:layout_width="@dimen/avatar_drawer_size"
        android:layout_height="@dimen/avatar_drawer_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
        android:contentDescription="@string/nav_header_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/user_profil"
        app:civ_border_color="@color/colorDivider"
        app:civ_border_width="3dp" />

    <TextView
        android:id="@+id/drawer_nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/nav_header_name"
        android:fontFamily="@font/koho_regular"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/drawer_telephoneTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/nav_header_telephone"
        android:fontFamily="@font/koho_regular"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

</LinearLayout>