<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_deal_listCV"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin2"
    android:layout_marginBottom="@dimen/fab_margin2"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/item_deal_list_timeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_extra_light"
            android:text="@string/time"
            android:textColor="@color/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/item_deal_list_avatarCIV"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/user_profil"
            app:civ_border_color="@color/colorAvatarBorder"
            app:civ_border_width="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_deal_list_nameTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:fontFamily="@font/nunito_light"
            android:text="Nazwa użytkownika"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary"
            android:singleLine="true"
            android:textSize="@dimen/detail_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_deal_list_avatarCIV"
            app:layout_constraintTop_toBottomOf="@+id/item_deal_list_categoryTV" />

        <TextView
            android:id="@+id/item_deal_list_categoryTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/category"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_deal_list_timeTV" />

        <TextView
            android:id="@+id/item_deal_list_titleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin2"
            android:layout_marginTop="@dimen/fab_margin2"
            android:ellipsize="end"
            android:fontFamily="@font/nunito_bold"
            android:gravity="left"
            android:lineSpacingMultiplier="0.8"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/detail_big_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_deal_list_avatarCIV"
            tools:ignore="RtlHardcoded,SpUsage" />

        <TextView
            android:id="@+id/item_deal_list_descriptionTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin2"
            android:fontFamily="@font/nunito_light"
            android:gravity="left"
            android:text="@string/description"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_deal_list_titleTV"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>